--- a/biblioteca-spring/src/main/resources/templates/autor/list.html
+++ b/biblioteca-spring/src/main/resources/templates/autor/list.html
@@ -16,6 +16,7 @@
 					<!-- Para que funcione el DataTables (la tabla tiene que tener siempre las mismas columnas)-->
 					<th class="col-md-1"></th>
 					<th class="col-md-1"></th>
+					<th class="col-md-1"></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -23,6 +24,7 @@
 					<td th:text="${author.nombre}"></td>
 					<td th:text="${author.nacionalidad}"></td>
 					<td th:text="${author.fechaNacimiento}"></td>
+					<td><a th:href="${'/autor/details/' + author.id}">Detalles</a></td>
 					<td sec:authorize="hasAuthority('ADMIN')">
 						<a th:href="@{update/{id}(id=${author.id})}">Actualizar</a>
 					</td>
@@ -41,6 +43,7 @@
 					null, // Columna Nombre
 					null, // Columna Nacionalidad 
 					null, // Columna Fecha Nacimiento
+					{"orderable": false, "searchable": false}, // Acciones
 					{"orderable": false, "searchable": false}, // Acciones
 					{"orderable": false, "searchable": false}, // Acciones
 				],
