--- a/biblioteca-spring/src/main/resources/templates/autor/details.html
+++ b/biblioteca-spring/src/main/resources/templates/autor/details.html
@@ -14,6 +14,10 @@
 		</div>
 		<div class="panel panel-default">
 			<div class="panel-heading">Nacionalidad</div>
+			<div class="panel-body" th:text="${autor.nacionalidad}"></div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">Fecha de nacimiento</div>
 			<div class="panel-body" th:text="${autor.fechaNacimiento}"></div>
 		</div>
 		<div class="panel panel-default">
