Se crea una version estable del proyecto en la branch leon

--- a/biblioteca-spring/src/main/resources/templates/fragments/nav.html
+++ b/biblioteca-spring/src/main/resources/templates/fragments/nav.html
@@ -44,7 +44,7 @@
 					<span class="caret"></span>
 				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/multa/sysupdatep">Actualizar multas</a></li>
+<!--						<li><a href="/multa/sysupdatep">Actualizar multas</a></li>-->
 						<li><a href="/multa/list">Ver multas</a></li>
 					</ul>
 				</li>
@@ -67,7 +67,7 @@
 					<span class="caret"></span>
 				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/prestamo/devolver">Devolución de préstamo</a></li>
+<!--						<li><a href="/prestamo/devolver">Devolución de préstamo</a></li>-->
 						<li><a href="/prestamo/solicitar">Solicitud de préstamo</a></li>
 					</ul>
 				</li>
@@ -79,7 +79,7 @@
 				</a>
 					<ul class="dropdown-menu">
 						<li><a href="/lector/prestamos">Libros prestados</a></li>
-						<li><a href="/lector/multas">Mis multas</a></li>
+<!--						<li><a href="/multa/list">Mis multas</a></li>-->
 					</ul>
 				</li>
 			</ul>
