--- a/biblioteca-spring/src/main/resources/templates/multa/list.html
+++ b/biblioteca-spring/src/main/resources/templates/multa/list.html
@@ -10,14 +10,14 @@
 		<table id="tableAuthors" class="table table-striped table-responsive-md">
 			<thead>
 				<tr>
-					<th>Lector</th>
+					<th>Id</th>
 					<th>Fecha inicio</th>
 					<th>Fecha fin</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="penalty: ${listPenaltys}">
-					<td th:text="${penalty.lector.nombre}"></td>
+					<td th:text="${penalty.id}"></td>
 					<td th:text="${penalty.fInicio}"></td>
 					<td th:text="${penalty.fFin}"></td>
 				</tr>
